# jarvis-graph-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
failures/: 001-pip-install-unpublished-dep.md  README.md
src/jarvis_graph_mcp/: __init__.py  __main__.py  backend.py  server.py
tests/: conftest.py  test_smoke.py
